--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
-<h1>HARİTACILIK İÇİN SİTELER</h1>
+<h1>HARİTACILIK İÇİN SİTELER</h1><br>
 
-<h2>Coğrafi Bilgi Sistemleri (CBS) Veri</h2>
-<p><a href="https://data.humdata.org/" target="_blank">The Humanitarian Data Exchange</a></p>
-<p><a href="https://gisgeography.com/" target="_blank">GIS Geography</a></p>
-<p><a href="http://www.diva-gis.org/" target="_blank">DIVA-GIS</a></p>
-<p><a href="http://freegisdata.rtwilson.com/#home" target="_blank">Free GIS Data</a></p>
-<p><a href="https://www.data.gov/" target="_blank">DATA gov</a></p>
-<p><a href="https://www.eea.europa.eu/data-and-maps/data/eea-reference-grids-2" target="_blank">EEA reference grid</a></p>
-<p><a href="http://legacy.lib.utexas.edu/maps/ams/turkey/" target="_blank">Great Britain War Office</a></p>
+<h2>Coğrafi Bilgi Sistemleri (CBS) Veri</h2><br>
+<p><a href="https://data.humdata.org/" target="_blank">The Humanitarian Data Exchange</a></p><br>
+<p><a href="https://gisgeography.com/" target="_blank">GIS Geography</a></p><br>
+<p><a href="http://www.diva-gis.org/" target="_blank">DIVA-GIS</a></p><br>
+<p><a href="http://freegisdata.rtwilson.com/#home" target="_blank">Free GIS Data</a></p><br>
+<p><a href="https://www.data.gov/" target="_blank">DATA gov</a></p><br>
+<p><a href="https://www.eea.europa.eu/data-and-maps/data/eea-reference-grids-2" target="_blank">EEA reference grid</a></p><br>
+<p><a href="http://legacy.lib.utexas.edu/maps/ams/turkey/" target="_blank">Great Britain War Office</a></p><br>
 
-<br /><h2>TUİK VERİ</h2>
-<p><a href="https://data.tuik.gov.tr/tr/" target="_blank">TUIK Veri</a></p>
+<br /><h2>TUİK VERİ</h2><br>
+<p><a href="https://data.tuik.gov.tr/tr/" target="_blank">TUIK Veri</a></p><br>
 
-<br /><h2>YÖK ATLAS VERİ</h2>
-<p><a href="https://yokatlas.yok.gov.tr/meslek-anasayfa.php" target="_blank">YÖK Veri</a></p>
+<br /><h2>YÖK ATLAS VERİ</h2><br>
+<p><a href="https://yokatlas.yok.gov.tr/meslek-anasayfa.php" target="_blank">YÖK Veri</a></p><br>
 
-<br /><h2>DÜNYA AĞAÇ Veri</h2>
-<p><a href="https://land.copernicus.eu/" target="_blank">Copernicus</a></p>
+<br /><h2>DÜNYA AĞAÇ Veri</h2><br>
+<p><a href="https://land.copernicus.eu/" target="_blank">Copernicus</a></p><br>
 
-<br /><h2>TOPRAK Veri</h2>
-<p><a href="http://www.fao.org/geonetwork/srv/en/metadata.show?id=14116" target="_blank">GeoNetwork</a></p>
+<br /><h2>TOPRAK Veri</h2><br>
+<p><a href="http://www.fao.org/geonetwork/srv/en/metadata.show?id=14116" target="_blank">GeoNetwork</a></p><br>
 
-<br /><h2>YOL Veri</h2>
-<p><a href="http://download.geofabrik.de" target="_blank">GeoFabrik</a></p>
+<br /><h2>YOL Veri</h2><br>
+<p><a href="http://download.geofabrik.de" target="_blank">GeoFabrik</a></p><br>
 
-<br /><h2>DOĞA Veri</h2>
-<p><a href="https://www.naturalearthdata.com/" target="_blank">Natural Earth</a></p>
+<br /><h2>DOĞA Veri</h2><br>
+<p><a href="https://www.naturalearthdata.com/" target="_blank">Natural Earth</a></p><br>
 
-<br /><h2>Sayısal Yükseklik Modeli (DEM) ve UYDU Veri</h2>
-<p><a href="https://gadm.org/index.html" target="_blank">GADM</a></p>
-<p><a href="http://www.viewfinderpanoramas.org/Coverage%20map%20viewfinderpanoramas_org3.htm" target="_blank">Coverage map</a></p>
-<p><a href="http://srtm.csi.cgiar.org/srtmdata/" target="_blank">SRTM Data</a></p>
-<p><a href="https://earthexplorer.usgs.gov/" target="_blank">EarthExplorer</a></p>
+<br /><h2>Sayısal Yükseklik Modeli (DEM) ve UYDU Veri</h2><br>
+<p><a href="https://gadm.org/index.html" target="_blank">GADM</a></p><br>
+<p><a href="http://www.viewfinderpanoramas.org/Coverage%20map%20viewfinderpanoramas_org3.htm" target="_blank">Coverage map</a></p><br>
+<p><a href="http://srtm.csi.cgiar.org/srtmdata/" target="_blank">SRTM Data</a></p><br>
+<p><a href="https://earthexplorer.usgs.gov/" target="_blank">EarthExplorer</a></p><br>
